<resources>
    <string name="app_name">HW14</string>
    <string name="entry_hint_username">UserName</string>
    <string name="entry_hint_password">Password</string>
    <string name="to_do">ToDo</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="sign_up">SignUp</string>
    <string name="number_of_tasks">number of tasks</string>
    <string name="user_not_found">User Not Found</string>
    <string name="logout">Logout</string>
    <string name="delete_all_tasks">Delete All tasks</string>
    <string name="delete_all_question">Are you sure you want to delete all tasks?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="date_picker_title">Date Picker</string>
    <string name="admin_page">Admin Page</string>
    <string name="list_username">Username :</string>
    <string name="list_password">Password :</string>
    <string name="list_number_of_tasks">Number Of Tasks :</string>
    <string name="user_password">User Password :</string>
    <string name="user_name">User Name:</string>
    <string name="users_list">Users List</string>
    <string name="date_of_register">Date of Register :</string>
    <string name="task_name">Task Name</string>
    <string name="task_description">Task Description</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="search_by_date">search by date</string>
    <string name="user_s_username">User\'s username :</string>
    <string name="not_found">Not Found</string>
    <string name="share">Share</string>
    <string name="text_share_subject">Task Sharing</string>
    <string name="text_share">
        Task Information\n
        Name: %1s\n
        Description : %2s\n
        TaskState : %3s\n
        Date : %4s\n
    </string>
</resources>