<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.erfan_delavari_hw14_maktab36.controller.Fragments.DialogTaskInformationFragment">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tasks_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="8"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView_Task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Task"
        app:layout_constraintTop_toBottomOf="@+id/button_share"
        tools:text="TEST" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tasks_Description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        app:layout_constraintBottom_toBottomOf="@+id/radioGroup_task_state"
        app:layout_constraintEnd_toStartOf="@+id/radioGroup_task_state"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Task"
        tools:text="ifiofjsijfdifjdsijfifjsijfdofjodsfijodsijodsijdosij" />

    <RadioGroup
        android:id="@+id/radioGroup_task_state"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_Task">

        <RadioButton
            android:id="@+id/radioButton_done"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to_do"
            android:textSize="14sp" />

        <RadioButton
            android:id="@+id/radioButton_doing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doing" />
    </RadioGroup>

    <Button
        android:id="@+id/button_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/button_time"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_task_state"
        tools:text="2020.A.30" />

    <Button
        android:id="@+id/button_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_date"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup_task_state"
        tools:text="18:02:56" />

    <Button
        android:id="@+id/button_share"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/share"
        app:backgroundTint="@color/colorSecondary"
        app:icon="@drawable/ic_action_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView_Task"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_Task"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_task" />


</androidx.constraintlayout.widget.ConstraintLayout>