<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_search"
    tools:context="com.example.erfan_delavari_hw14_maktab36.controller.Fragments.SearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_edit_text_task_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text_task_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/task_name"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/search_edit_text_task_description_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text_task_name_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_edit_text_task_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/task_description"
            android:importantForAutofill="no"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_date_search"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#05707E"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/search_edit_text_task_description_layout"
        app:layout_constraintTop_toBottomOf="@+id/search_checkBox_search_by_date">

        <TextView
            android:id="@+id/search_text_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/search_button_from_date"
            app:layout_constraintEnd_toStartOf="@+id/search_button_from_date"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_button_from_date" />

        <TextView
            android:id="@+id/search_text_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/search_button_to_date"
            app:layout_constraintEnd_toStartOf="@+id/search_button_to_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/search_button_to_date" />

        <Button
            android:id="@+id/search_button_from_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:backgroundTint="@color/colorSecondary"
            app:layout_constraintEnd_toStartOf="@+id/search_button_from_time"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/search_text_from"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="2020.04.26" />

        <Button
            android:id="@+id/search_button_from_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:backgroundTint="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/search_button_from_date"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="16:20:00" />

        <Button
            android:id="@+id/search_button_to_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:backgroundTint="@color/colorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/search_button_from_date"
            app:layout_constraintStart_toStartOf="@+id/search_button_from_date"
            app:layout_constraintTop_toBottomOf="@+id/search_button_from_date"
            tools:text="2020.04.26" />

        <Button
            android:id="@+id/search_button_to_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:backgroundTint="@color/colorSecondary"
            app:layout_constraintEnd_toEndOf="@+id/search_button_from_time"
            app:layout_constraintStart_toStartOf="@+id/search_button_from_time"
            app:layout_constraintTop_toBottomOf="@+id/search_button_from_time"
            tools:text="16:20:00" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view_task_search"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_date_search"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/list_row_even_task_search" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/search_checkBox_search_by_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#05707E"
        android:checked="true"
        android:padding="8dp"
        android:text="@string/search_by_date"
        app:layout_constraintStart_toStartOf="@+id/search_edit_text_task_description_layout"
        app:layout_constraintTop_toBottomOf="@+id/search_edit_text_task_description_layout" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/search_button_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_action_search"
        app:backgroundTint="@color/colorSecondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView_no_result_found"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/ic_search_no_result"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_date_search" />
</androidx.constraintlayout.widget.ConstraintLayout>